Fixed the links to other projects and to the main Tux4kids site. Fixed the tux logo that was too low.
git-svn-id: svn://svn.debian.org/svn/tux4kids/tux4kids-web@1007 47d30e19-490b-0410-9d18-e851f4e465b3

--- a/htdocs/newsitetest/tuxmath/css/layout.css
+++ b/htdocs/newsitetest/tuxmath/css/layout.css
@@ -18,7 +18,7 @@
 	}
 	
 	.header{
-	position: relative;
+	position: absolute;
 	top: 0px;
 	left: 0px;
 	width: 1000px;
@@ -27,7 +27,7 @@
 	background-repeat: no-repeat;
 	background-color: #fff;
 	}
-	
+		
 	.heading{
 	font-size: 20px;
 	}
@@ -35,18 +35,19 @@
 	.col1{
 	position:relative;
 	left: 0px;
-	top: 0px;
+	top: 125px;
 	height: 600px;
 	width: 175px;
 	background-image: url('../images/tmmbg.png');
 	background-repeat: no-repeat;
 	background-color: #000;
+	text-align: center;
 	}
 	
 	.col2{
 	position:relative;
 	left: 175px;
-	top: -600px;
+	top: -475px;
 	width: 815px;
 	color: #000;
 	vertical-align: top;
@@ -63,34 +64,41 @@
 
 	.drop span {
 	position: relative;
-	top: -98px;
+	top: -90px;
 	float:right;
 	}
 	
-	.downloads {
-	padding: 10px;
-	text-align: center;
+	.front {
 	border-collapse: collapse;
+	font-family: Arial;
+	width: 815px;
 	}
 	
-	.downloads th {
+	.front th{
+	background-color: #8aa1f6;
+	font-size:15px;
+	text-align: left;
+	}
+	
+	.front td{
+	background-color: #d2dcff;
+	vertical-align: top;
+	font-size:12px;
+	text-align: left;
+	}
+	
+	.dow {
+	font-family: Arial;
+	width: 815px;
+	}
+	
+	.dow th{
 	font-size: 20px;
-	background-color: #fff;
-	text-decoration: underline;
+	text-align: left;
 	}
 	
-	.downloads tr {
-	background-color: #D3D3D3;
+	.dow td{
+	font-size:13px;
+	vertical-align: top;
+	text-align: left;
 	}
-	
-	.downloads td {
-	width: 250px;
-	}
-	
-	.command {
-	font-family: courier new;
-	}
-	
-	.news {
-	font-size: 14px;
-	font-family: Times New Roman;
